# graph-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: main.py  pyproject.toml
backend/dependencies/: edge.py  execution.py  input_node.py  llm_node.py  llm_provider.py  node.py  output_node.py  user.py  workflow.py
backend/enums/: __init__.py  execution.py  llm_provider.py  node.py
backend/exceptions/: __init__.py  edge.py  execution.py  llm_provider.py  node.py  workflow.py
backend/migrations/: __init__.py  env.py
backend/migrations/versions/: 96078f6fa6ee_init.py
backend/models/: __init__.py  base.py  edge.py  execution.py  llm_provider.py  node.py  user.py  workflow.py
backend/repositories/: __init__.py  base.py
backend/routers/: __init__.py  edge.py  execution.py  health.py  input_node.py  llm_node.py  llm_provider.py  node.py  output_node.py  user.py  workflow.py
backend/schemas/: __init__.py  execution.py  llm_provider.py  node.py  user.py  workflow.py
backend/settings/: __init__.py  auth.py  base.py  chroma.py  ollama.py  postgres.py  prefect.py  redis.py
backend/tests/factories/: __init__.py  base.py  edge.py  execution.py  llm_provider.py  node.py  user.py  workflow.py
backend/tests/test_api/: base.py  test_auth.py  test_edge.py  test_execution.py  test_health.py  test_llm_provider.py  test_node.py  test_user.py  test_workflow.py
backend/usecases/: __init__.py  auth.py  edge.py  execution.py  health.py  input_node.py  llm_node.py  llm_provider.py  node.py  output_node.py  user.py  workflow.py
backend/utils/: crypto.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  AuthScreen.tsx  GraphCanvas.tsx  InspectorPanel.tsx  WorkflowSidebar.tsx
