[project]
name = "graph-ai-backend"
version = "0.1.0"
description = "Graph AI Backend"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.128.0",
    "sqlalchemy[asyncio]==2.0.46",
    "gunicorn[gevent]==23.0.0",
    "asyncpg==0.31.0",
    "alembic==1.18.3",
    "redis[hiredis]==6.1.0",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.12.0",
    "httpx==0.28.1",
    "prefect==3.4.13",
    "python-jose==3.4.0",
    "passlib==1.7.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers>=4.0.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # Conflicts with D211.
    "D213",   # Conflicts with D212.
    "COM812", # Conflicts with formatter (trailing commas).
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
